flux/default/redis/stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: default
  labels:
    app: redis
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      tolerations:
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      volumes:
      - name: redis
        persistentVolumeClaim:
          claimName: apps-redis
      - name: tmp
        emptyDir:
          medium: Memory
      containers:
      - name: redis
        image: docker.io/library/redis:8.6.1-alpine3.23
        volumeMounts:
        - name: redis
          mountPath: /data
        - name: tmp
          mountPath: /tmp
        args:
        - redis-server
        - --appendonly
        - "yes"
        ports:
        - name: redis
          containerPort: 6379
        resources:
          requests:
            cpu: 0.2
            memory: 256Mi
            ephemeral-storage: 256Mi
          limits:
            cpu: 8
            memory: 8Gi
            ephemeral-storage: 10Gi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        fsGroupChangePolicy: OnRootMismatch
