flux/default/redis/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: redis
spec:
  endpointSelector:
    matchLabels:
      app: redis
  ingress:
  - fromEntities:
    - cluster
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
  egress: []
